<resources>
    <string name="app_name">Assigment3OPSC</string>
    <string name="movie_title">Movie Title</string>
    <string name="password">Password</string>
    <string name="new_user_register_here">New user? Register here.</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="Email">Email</string>
    <string name="todo">TODO</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="register">Register</string>
    <string name="returning_client_login_here">Returning client? Login here.</string>
    <string name="Emails">Email</string>
    <string name="todo1">TODO</string>
    <string name="search_button">Search Button</string>
    <string name="search_hint">Search Hint</string>
    <string name="movie_search">Movie Search</string>
    <string name="return_to_movie_details">Return</string>
    <string name="registerButton">Register</string>
    <string name="returning_user_login_here">Returning user? Login here.</string>
    <string name="registration_password">Password</string>
    <string name="registration_email">Email</string>
    <string name="registration_username">Username</string>
    <string name="app_logo">App Logo</string>
    <string name="login_app_logo">App Logo</string>
    <string name="login_email">Email</string>
    <string name="login_button">Login</string>
    <string name="login_new_user_register_here">New user? Register here.</string>
    <string name="login_password">Password</string>
    <string name="details_add_to_favorites">Add to Favorites</string>
    <string name="details_view_favorites">View Favorites</string>
    <string name="username_hints">Username</string>
    <string name="register_password">Password</string>
    <string name="register_email">Email</string>
    <string name="favorite_edit">Edit</string>
    <string name="favorite_delete">Delete</string>
    <string name="favorite_clear">Clear</string>
    <string name="movie_description">Movie Description</string>
    <string name="favorite_movie_title">Movie Title</string>
    <string name="favorite_movie_image">favorite Movie Image</string>
    <string name="studio">Studio:</string>
    <string name="critics_rating">Critics Rating:</string>
    <string name="help_and_support">Help &amp; Support</string>
    <string name="privacy_and_safety">Privacy &amp; Safety</string>


</resources>